--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,8 +16,7 @@ body {
 }
 .logo {
     position: absolute; /* 화면에 고정 위치 */
-    width: 35%;
-    height: 50px;
+    height: 100px;
     display: flex; /* 플렉스 컨테이너로 변경 */
     justify-content: center; /* 중앙 정렬 */
     align-items: center; /* 수직 중앙 정렬 */
@@ -25,31 +24,48 @@ body {
     left: 50%; /* 화면의 중앙으로 이동 */
     transform: translateX(-50%); /* X축으로 -50% 이동하여 정확한 중앙 배치 */
     z-index: 1001; /* 다른 요소보다 위에 나타나도록 설정 */
-    /*background-color: #4CAF50;*/
+    border-radius: 5px;
 }
 
 .logo img {
     width: 100px; /* 로고 이미지 너비 조절 */
     height: auto; /* 높이 자동 조절 */
 }
-
 #map-container {
     /* 지도가 들어갈 부분에 position:relative 추가하여 토글 버튼의 위치 기준으로 설정 */
     position: relative;
-    margin-top: 100px;
+    margin-top: 150px;
     margin-left: 20%;
     margin-right: 10%;
     /*flex: 1;*/
     height: 100vh;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     width: 35%;
+}
+.map {
+    display: block;
+    margin-right: 50px;
+    width: 100%;
+    height: 60vh;
+    float: right;
+}
+#keyword {
+    width: 80%;
+    padding: 10px;
+}
+#map-search-btn {
+    padding: 10px;
+    background-color: #bbb4ff;
 }
 #select {
     /* 선택 폼 스타일 */
-    margin-top: 100px;
+    margin-top: 170px;
     width: 20%; /* 선택 폼 너비 설정 */
     padding: 20px;
     /*border: 1px solid black;*/
+}
+#addCourseBtn,#select-searchBtn{
+    background-color: #bbb4ff;
 }
 input[type="text"] {
     width: calc(100% - 20px); /* 여백 고려한 너비 조절 */
@@ -243,7 +259,7 @@ button {
     margin-bottom: 10px; /* 위아래 여백 추가 */
 }
 
-#search-bar {
+#keyword {
     flex: 2; /* 검색창이 더 크게 설정 */
     padding: 10px;
 }
@@ -253,7 +269,13 @@ button[type="submit"] {
     padding: 8px; /* 버튼 내부 여백 조정 */
 }
 
-
+@media (max-width: 650px) {
+    .logo{
+        background-color: #ffe7fb;
+        width: 90%;
+        height: 50px;
+    }
+}
 
 @media (max-width: 1000px) {
     .container {
@@ -261,7 +283,7 @@ button[type="submit"] {
     }
     #map-container {
         width: 100%;
-        height: 200px;
+        height: 600px;
         top: 40px;
         margin-left: 0;
     }
@@ -270,7 +292,10 @@ button[type="submit"] {
         transform: translateX(-300px); /* 사이드바 숨김 */
     }
     .menu-toggle {
-        color: black;
+        width: 25px;
+        background-color: #ffb4b4;
+        border-radius: 3px;
+        color: #000000;
         display: block;
     }
     .sidebar.active {
