--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,15 +1,15 @@
 /* 기본 스타일 */
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start; /* 변경: 중앙 정렬 대신 왼쪽 정렬 */
-    align-items: flex-start;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-}
-.container {
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    justify-content: flex-start; !* 변경: 중앙 정렬 대신 왼쪽 정렬 *!*/
+/*    align-items: flex-start;*/
+/*    width: 100%;*/
+/*    height: 100vh;*/
+/*    margin: 0;*/
+/*}*/
+.container-main {
     display: flex;
     flex: 1; /* 화면 전체를 차지하도록 설정 */
     flex-direction: row;
